Formatting and removing Vector for List in comments